--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "leekwanghyu@naver.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.4"
+    }
 }
